testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__in-composite-collation-mismatch.snap
---
source: indexes.sqltest
expression: SELECT id FROM collated_values_composite WHERE val IN ('hello');
info:
  statement_type: SELECT
  tables:
  - collated_values_composite
  setup_blocks:
  - collated-composite-mismatch
  database: ':memory:'
---
QUERY PLAN
`--SCAN collated_values_composite USING COVERING INDEX idx_collated_values_composite_nocase
