testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__index-for-order-by.snap
---
source: indexes.sqltest
expression: SELECT id, sku, price FROM products ORDER BY price LIMIT 10;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_price

BYTECODE
addr  opcode          p1  p2  p3  p4                  p5  comment
   0  Init             0  15   0                       0  Start at 15
   1  Integer         10   4   0                       0  r[4]=10; LIMIT counter
   2  IfNot            4  14   0                       0  if !r[4] goto 14
   3  OpenRead         0   2   0  k(7,B,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   4  OpenRead         1   5   0  k(2,B)               0  index=idx_products_price, root=5, iDb=0
   5  Rewind           1  14   0                       0  Rewind index idx_products_price
   6    DeferredSeek   1   0   0                       0
   7    IdxRowId       1   1   0                       0  r[1]=cursor 1 for index idx_products_price.rowid
   8    Column         0   1   2                       0  r[2]=products.sku
   9    Column         0   4   3                       0  r[3]=products.price
  10    RealAffinity   3   0   0                       0
  11    ResultRow      1   3   0                       0  output=r[1..3]
  12    DecrJumpZero   4  14   0                       0  if (--r[4]==0) goto 14
  13  Next             1   6   0                       0
  14  Halt             0   0   0                       0
  15  Transaction      0   1  14                       0  iDb=0 tx_mode=Read
  16  Goto             0   1   0                       0
