testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__index-not-equal.snap
---
source: indexes.sqltest
expression: "SELECT id, sku, name FROM products WHERE category != 'Discontinued';"
info:
  statement_type: SELECT
  tables:
    - products
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--SCAN products

BYTECODE
addr  opcode       p1  p2  p3  p4                  p5  comment
   0  Init          0  11   0                       0  Start at 11
   1  OpenRead      0   2   0  k(7,B,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2  Rewind        0  10   0                       0  Rewind table products
   3    Column      0   3   5                       0  r[5]=products.category
   4    Eq          5   6   9  Binary               0  if r[5]==r[6] goto 9
   5    RowId       0   1   0                       0  r[1]=products.rowid
   6    Column      0   1   2                       0  r[2]=products.sku
   7    Column      0   2   3                       0  r[3]=products.name
   8    ResultRow   1   3   0                       0  output=r[1..3]
   9  Next          0   3   0                       0
  10  Halt          0   0   0                       0
  11  Transaction   0   1  14                       0  iDb=0 tx_mode=Read
  12  String8       0   6   0  Discontinued         0  r[6]='Discontinued'
  13  Goto          0   1   0                       0
