testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__multiple-indexes-choice.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, sku, name, price
      FROM products
      WHERE category = 'Electronics' AND price < 100;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_price (price<?)
