testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__not-indexed-delete.snap
---
source: indexes.sqltest
expression: DELETE FROM products NOT INDEXED WHERE sku = 'OLD';
info:
  statement_type: DELETE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
